--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,14 @@
 .dado2 {
     position: relative;
-    width:90px; height: 50px; display:inline-block; margin: 15px; 
+    width: 90px;
+    height: 50px;
+    display: inline-block;
+    margin: 15px;
 }
- .dado1 {
-    width:90px; height: 50px; display:inline-block; margin: 15px; 
- }
+
+.dado1 {
+    width: 90px;
+    height: 50px;
+    display: inline-block;
+    margin: 15px;
+}
